In-page search results overlay broken if the result spans more than two elements https://bugs.webkit.org/show_bug.cgi?id=229926 <rdar://82741616>

Reviewed by Tim Horton.

Source/WebCore:

pathsWithShrinkWrappedRects fails to form a closed path for adjoining rects when they are horizontally out-of-order.
e.g.
1: (60,0) (30x20)
2:  (0,0) (30x20)
3: (30,0) (30x20)
Let's sort the rects horizontally too (as we already do y ordering in polygonsForRect).

* platform/graphics/PathUtilities.cpp:
(WebCore::polygonsForRect):

LayoutTests:

* fast/shrink-wrap/rect-shrink-wrap-expected.html:
* fast/shrink-wrap/rect-shrink-wrap.html: Add the out-of-order rect case.


Canonical link: https://commits.webkit.org/241352@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282052 268f45cc-cd09-0410-ab3c-d52691b4dbfc